<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_enter_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omar.quizbot.EnterNameActivity"
    android:background="@color/primary_darker">

    <Button
        android:text="@string/begin_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btnBegin"
        android:background="@drawable/button_background_drawable"
        android:textColor="@color/white"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp" />

    <TextView
        android:text="@string/enter_your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="69dp"
        android:id="@+id/textView"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="17dp"
        android:id="@+id/etName"
        android:hint="@string/full_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/no_name_entered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvWarning"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        android:fontFamily="sans-serif-condensed"
        android:layout_below="@+id/etName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp"
        android:visibility="invisible"
        android:textSize="18sp" />
</RelativeLayout>
