<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trivia_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.omar.quizbot.TriviaResultsActivity"
    android:background="@color/primary_darker">

    <TextView
        android:text="@string/trivia_result_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvResultsLabel"
        android:textColor="@color/secondary_text"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_margin="16dp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvName"
        android:textColor="@color/primary_text"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_above="@+id/tvScoreLabel"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvScorePercentage"
        android:textStyle="bold"
        android:textSize="70sp"
        android:textColor="@color/primary"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:layout_centerVertical="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btnTryAgain"
        android:layout_marginBottom="35dp" />

    <TextView
        android:text="@string/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/tvScoreLabel"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/secondary_text"
        android:gravity="center"
        android:layout_above="@+id/tvTotalQuestions"
        android:layout_marginBottom="16dp" />

    <TextView
        android:text="@string/label_total_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalQuestions"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tvCorrect"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/label_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCorrect"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/btnTryAgain"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tvIncorrect"
        android:layout_marginBottom="8dp" />

    <TextView
        android:text="@string/label_incorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvIncorrect"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:layout_alignParentStart="true"
        android:textStyle="italic"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tvScorePercentage"
        android:layout_marginBottom="16dp" />

    <Button
        android:text="@string/try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:id="@+id/btnTryAgain"
        android:textColor="@color/white"
        android:background="@drawable/button_background_drawable"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="45dp"
        android:layout_marginStart="45dp" />

</RelativeLayout>
